# load_carriers_tracker

./: CMakeLists.txt  README.md  package.xml
include/load_carriers_tracker/: carriers_tracker.h  kalman_filter.hpp  object_tracker.h
launch/: carrier_trackers.launch
src/: carriers_tracker.cpp  carriers_tracker_node.cpp  object_tracker.cpp  transform_detections.cpp  transform_detections_node.cpp
